--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,12 +21,12 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 url = "2.2.2"
 
-tokio = { version = "1.6.1", features = ["fs", "process", "macros", "rt", "rt-multi-thread", "time"] }
-tokio-util = { version = "0.6.7", features = ["codec"] }
+tokio = { version = "1.42.0", features = ["fs", "process", "macros", "rt", "rt-multi-thread", "time"] }
+tokio-util = { version = "0.7.13", features = ["codec"] }
 warp = { git = "https://github.com/kazk/warp", branch = "permessage-deflate", default-features = false, features = ["websocket"] }
 
-tracing = "0.1.26"
-tracing-subscriber = "0.2.18"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 thiserror = "1.0.26"
 
 [dev-dependencies]
